--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Date Change Notice -->
+    <div class="date-notice">
+        <div class="container">
+            <span>IMPORTANT: Event date has been moved from August 2 to September 26, 2025</span>
+        </div>
+    </div>
+
     <!-- Header -->
     <header>
         <nav class="container">
@@ -17,7 +24,6 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#requirements">Requirements</a></li>
                 <li><a href="#prizes">Prizes</a></li>
-                <li><a href="#criteria">Criteria</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -102,35 +108,6 @@
                     <h3>⭐ Most Unique</h3>
                     <div class="prize-amount">$50</div>
                     <p>Gift Card</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Criteria Section -->
-    <section id="criteria" class="criteria">
-        <div class="container">
-            <h2 class="slide-up-title">Judging Criteria</h2>
-            <div class="criteria-grid">
-                <div class="criteria-item slide-up-card">
-                    <h3>🎯 Problem Solving</h3>
-                    <p>How well does your solution actually address and solve the given problem? We're looking for practical, effective approaches.</p>
-                </div>
-                <div class="criteria-item slide-up-card">
-                    <h3>💡 Uniqueness</h3>
-                    <p>How unique and innovative is your idea? Stand out from the crowd with creative and original thinking.</p>
-                </div>
-                <div class="criteria-item slide-up-card">
-                    <h3>⚙️ Functionality</h3>
-                    <p>To what extent does your solution work? While it doesn't need to be fully functional, make it as complete as possible.</p>
-                </div>
-                <div class="criteria-item slide-up-card">
-                    <h3>🎨 Visual Appeal</h3>
-                    <p>How good does your solution look aesthetically? Great design enhances user experience and demonstrates attention to detail.</p>
-                </div>
-                <div class="criteria-item slide-up-card">
-                    <h3>🎤 Presentation</h3>
-                    <p>How well do you present your solution? Clear communication and compelling storytelling are key to success.</p>
                 </div>
             </div>
         </div>
