--- a/faq.html
+++ b/faq.html
@@ -174,7 +174,7 @@
                         Can I use AI tools?
                     </h3>
                     <p class="text-gray-700 text-lg leading-relaxed">
-                        Yes, as long as you follow our rules and disclose any AI assistance in your README or slides. (See our Code of Conduct for details.)
+                        Yes, as long as you follow our rules and disclose any AI assistance in your README  . (See our Code of Conduct for details.)
                     </p>
                 </div>
 
