Updated with new info

--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.png" type="image/png">
     <style>
         body { font-family: 'Inter', sans-serif; }
         .gradient-bg { background: linear-gradient(135deg, #1e3a8a 0%, #374151 100%); }
@@ -97,7 +98,7 @@
                         Where is it?
                     </h3>
                     <p class="text-gray-700 text-lg leading-relaxed">
-                        In North Dallas, TX. The exact venue will be shared with registered participants.
+                        DFWHacks is happening in Collin College Frisco Campus, 9700 Wade Blvd, Frisco, TX 75035.
                     </p>
                 </div>
 
