--- a/sponsors.html
+++ b/sponsors.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.png" type="image/png">
     <style>
         body { font-family: 'Inter', sans-serif; }
         .gradient-bg { background: linear-gradient(135deg, #1e3a8a 0%, #374151 100%); }
@@ -64,7 +65,7 @@
                 <div class="hidden md:block text-orange-200">•</div>
                 <div class="flex items-center">
                     <i class="fas fa-map-marker-alt text-orange-200 mr-2"></i>
-                    <span class="font-semibold">Location TBA</span>
+                    <span class="font-semibold">Collin College Frisco</span>
                 </div>
                 <div class="hidden md:block text-orange-200">•</div>
                 <div class="flex items-center">
