--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-gray-900 mb-4">About DFWhacks</h2>
                 <p class="text-xl text-gray-600 max-w-3xl mx-auto">
-                    DFW Hacks is more than a hackathon—it's a celebration of creativity, collaboration, and the future of tech. Join us on <strong>September 27th, 2025</strong> at the <strong>Frisco Public Library</strong> for an action-packed day where high school students of all experience levels will form teams, build software and hardware projects, attend engaging workshops, and get guidance from industry mentors. <strong>Everyone is welcome!</strong> Come with an idea or simply your curiosity; leave with new skills, new friends, and something you're proud to demo.
+                    DFW Hacks is more than a hackathon—it's a celebration of creativity, collaboration, and the future of tech. Join us on <strong>September 27th, 2025</strong> at the <strong>Collin College Frisco</strong> for an action-packed day where high school students of all experience levels will form teams, build software and hardware projects, attend engaging workshops, and get guidance from industry mentors. <strong>Everyone is welcome!</strong> Come with an idea or simply your curiosity; leave with new skills, new friends, and something you're proud to demo.
                 </p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
