--- a/sponsors.html
+++ b/sponsors.html
@@ -133,7 +133,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-gray-900 mb-4">Why Sponsor DFWhacks?</h2>
-                <p class="text-xl text-gray-600">Partner with us to make a lasting impact on the next generation of technologists</p>
+                <p class="text-xl text-gray-600">Partner with us to make a lasting impact on the next generation of technology</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="bg-white p-8 rounded-xl shadow-lg text-center hover:shadow-xl transition-shadow">
