--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 Don't miss this opportunity to prepare for DFWhacks with hands-on workshops led by experienced mentors.
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-                <a href="https://zoom.us/your-webinar-link" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors inline-flex items-center shadow-lg">
+                <a href="https://zoom.us/" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors inline-flex items-center shadow-lg">
                     <i class="fas fa-video mr-2"></i>
                     Join Zoom Webinar
                 </a>
