--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
                     <i class="fas fa-clock mr-1"></i>
                     Duration: 45 minutes
                 </div>
+                <div class="text-sm text-green-600 font-medium">
+                    <i class="fas fa-clock mr-1"></i>
+                    Time: 11:00am CST
+                </div>
             </div>
 
             <!-- Workshop 2 -->
@@ -164,9 +168,9 @@
                 </div>
                 <h3 class="text-xl font-bold text-gray-900 mb-2">Intro to Vibe Coding</h3>
                 <p class="text-gray-600 mb-4">Discover creative coding techniques and learn how to build visually engaging projects.</p>
-                <div class="text-sm text-purple-600 font-medium">
+                <div class="text-sm text-green-600 font-medium">
                     <i class="fas fa-clock mr-1"></i>
-                    Duration: 45 minutes
+                    Time: 2:00pm CST
                 </div>
             </div>
 
@@ -181,6 +185,10 @@
                     <i class="fas fa-clock mr-1"></i>
                     Duration: 45 minutes
                 </div>
+                <div class="text-sm text-green-600 font-medium">
+                    <i class="fas fa-clock mr-1"></i>
+                    Time: 4:00pm CST
+                </div>
             </div>
         </div>
 
@@ -193,10 +201,6 @@
                 <li class="flex items-center">
                     <i class="fas fa-calendar text-orange-500 mr-3"></i>
                     <span><strong>Date:</strong> Saturday, September 20th, 2025</span>
-                </li>
-                <li class="flex items-center">
-                    <i class="fas fa-clock text-orange-500 mr-3"></i>
-                    <span><strong>Time:</strong> Sessions throughout the day</span>
                 </li>
                 <li class="flex items-center">
                     <i class="fas fa-laptop text-orange-500 mr-3"></i>
