--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <i class="fas fa-clock mr-1"></i>
                     Duration: 45 minutes
                 </div>
-                <div class="text-sm text-green-600 font-medium">
+                <div class="text-sm text-blue-600 font-medium">
                     <i class="fas fa-clock mr-1"></i>
                     Time: 11:00am CST
                 </div>
@@ -168,7 +168,11 @@
                 </div>
                 <h3 class="text-xl font-bold text-gray-900 mb-2">Intro to Vibe Coding</h3>
                 <p class="text-gray-600 mb-4">Discover creative coding techniques and learn how to build visually engaging projects.</p>
-                <div class="text-sm text-green-600 font-medium">
+                <div class="text-sm text-purple-600 font-medium">
+                    <i class="fas fa-clock mr-1"></i>
+                    Duration: 45 minutes
+                </div>
+                <div class="text-sm text-purple-600 font-medium">
                     <i class="fas fa-clock mr-1"></i>
                     Time: 2:00pm CST
                 </div>
@@ -180,7 +184,7 @@
                     <i class="fas fa-brain text-white text-xl"></i>
                 </div>
                 <h3 class="text-xl font-bold text-gray-900 mb-2">Computational Thinking</h3>
-                <p class="text-gray-600 mb-4">Master problem-solving strategies and logical thinking for effective programming.</p>
+                <p class="text-gray-600 mb-4">Learn how to approach problems using strategies and logical thinking for effective programming.</p>
                 <div class="text-sm text-green-600 font-medium">
                     <i class="fas fa-clock mr-1"></i>
                     Duration: 45 minutes
