--- a/index.html
+++ b/index.html
@@ -153,12 +153,16 @@
                 <p class="text-gray-600 mb-4">Learn the fundamentals of web development and create your first webpage from scratch.</p>
                 <div class="text-sm text-blue-600 font-medium">
                     <i class="fas fa-clock mr-1"></i>
-                    Duration: 45 minutes
+                    Duration: 30 minutes
                 </div>
                 <div class="text-sm text-blue-600 font-medium">
                     <i class="fas fa-clock mr-1"></i>
                     Time: 11:00am CST
                 </div>
+                <a href="https://us05web.zoom.us/j/85397064199?pwd=X3DF7vX2AYi763ZMPIqtLHh43VCgrf.1" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors inline-flex items-center shadow-lg">
+                    <i class="fas fa-video mr-2"></i>
+                    Join Zoom Webinar
+                </a>
             </div>
 
             <!-- Workshop 2 -->
@@ -170,12 +174,16 @@
                 <p class="text-gray-600 mb-4">Discover creative coding techniques and learn how to build visually engaging projects.</p>
                 <div class="text-sm text-purple-600 font-medium">
                     <i class="fas fa-clock mr-1"></i>
-                    Duration: 45 minutes
+                    Duration: 30 minutes
                 </div>
                 <div class="text-sm text-purple-600 font-medium">
                     <i class="fas fa-clock mr-1"></i>
                     Time: 2:00pm CST
                 </div>
+                <a href="https://us05web.zoom.us/j/89033319471?pwd=T5SEjrY1LoPjAAaDzTTZlQxBKN7Ut8.1" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors inline-flex items-center shadow-lg">
+                    <i class="fas fa-video mr-2"></i>
+                    Join Zoom Webinar
+                </a>
             </div>
 
             <!-- Workshop 3 -->
@@ -187,56 +195,18 @@
                 <p class="text-gray-600 mb-4">Learn how to approach problems using strategies and logical thinking for effective programming.</p>
                 <div class="text-sm text-green-600 font-medium">
                     <i class="fas fa-clock mr-1"></i>
-                    Duration: 45 minutes
+                    Duration: 30 minutes
                 </div>
                 <div class="text-sm text-green-600 font-medium">
                     <i class="fas fa-clock mr-1"></i>
                     Time: 4:00pm CST
-                </div>
-            </div>
-        </div>
-
-        <!-- Workshop Details -->
-<div class="bg-gray-50 rounded-xl p-8 mb-8">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
-        <div>
-            <h3 class="text-2xl font-bold text-gray-900 mb-4">Workshop Details</h3>
-            <ul class="space-y-3 text-gray-600">
-                <li class="flex items-center">
-                    <i class="fas fa-calendar text-orange-500 mr-3"></i>
-                    <span><strong>Date:</strong> Saturday, September 20th, 2025</span>
-                </li>
-                <li class="flex items-center">
-                    <i class="fas fa-laptop text-orange-500 mr-3"></i>
-                    <span><strong>Format:</strong> Interactive online workshops</span>
-                </li>
-                <li class="flex items-center">
-                    <i class="fas fa-dollar-sign text-orange-500 mr-3"></i>
-                    <span><strong>Cost:</strong> Completely FREE</span>
-                </li>
-                <li class="flex items-center">
-                    <i class="fas fa-users text-orange-500 mr-3"></i>
-                    <span><strong>Audience:</strong> All skill levels welcome</span>
-                </li>
-            </ul>
-        </div>
-        
-        <!-- Moved to right side and adjusted styling -->
-        <div class="text-center bg-white p-8 rounded-xl shadow-sm border border-gray-100">
-            <h3 class="text-2xl font-bold text-gray-900 mb-4">Ready to Level Up Your Skills?</h3>
-            <p class="text-gray-600 mb-6">
-                Don't miss this opportunity to prepare for DFWhacks with hands-on workshops led by experienced mentors.
-            </p>
-            <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-                <a href="https://zoom.us/" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors inline-flex items-center shadow-lg">
+                </div>    
+                <a href="https://us05web.zoom.us/j/85397064199?pwd=X3DF7vX2AYi763ZMPIqtLHh43VCgrf.1" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors inline-flex items-center shadow-lg">
                     <i class="fas fa-video mr-2"></i>
                     Join Zoom Webinar
                 </a>
             </div>
         </div>
-    </div>
-</div>
-        
     </div>
 </section>
     <!-- About Section -->
