--- a/index.html
+++ b/index.html
@@ -452,11 +452,12 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto">
                     <div class="bg-white p-8 rounded-xl shadow-lg text-center border border-gray-100 hover:shadow-xl transition-shadow">
                         <div class="text-3xl font-bold text-gray-700 mb-2">JantaPower</div>
-                        <p class="text-gray-500 text-sm">Technology Partner</p>
                     </div>
                     <div class="bg-white p-8 rounded-xl shadow-lg text-center border border-gray-100 hover:shadow-xl transition-shadow">
                         <div class="text-3xl font-bold text-gray-700 mb-2">PantasticLLC</div>
-                        <p class="text-gray-500 text-sm">Innovation Partner</p>
+                    </div>
+                    <div class="bg-white p-8 rounded-xl shadow-lg text-center border border-gray-100 hover:shadow-xl transition-shadow">
+                        <div class="text-3xl font-bold text-gray-700 mb-2">MakeX Corp</div>
                     </div>
                 </div>
             </div>
