--- a/index.html
+++ b/index.html
@@ -140,72 +140,13 @@
             <h2 class="text-4xl font-bold text-gray-900 mb-4">Get Ready for DFWhacks</h2>
             <p class="text-xl text-gray-600 max-w-3xl mx-auto">
                 Join our free webinar workshops on <strong>Saturday, September 20th</strong> to build essential skills before the big day
+                <br>
+                <br>
             </p>
-        </div>
-
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12">
-            <!-- Workshop 1 -->
-            <div class="bg-gradient-to-br from-blue-50 to-blue-100 rounded-xl p-6 border border-blue-200 hover:shadow-lg transition-shadow">
-                <div class="w-12 h-12 bg-blue-500 rounded-lg flex items-center justify-center mb-4">
-                    <i class="fas fa-code text-white text-xl"></i>
-                </div>
-                <h3 class="text-xl font-bold text-gray-900 mb-2">Intro to HTML</h3>
-                <p class="text-gray-600 mb-4">Learn the fundamentals of web development and create your first webpage from scratch.</p>
-                <div class="text-sm text-blue-600 font-medium">
-                    <i class="fas fa-clock mr-1"></i>
-                    Duration: 30 minutes
-                </div>
-                <div class="text-sm text-blue-600 font-medium">
-                    <i class="fas fa-clock mr-1"></i>
-                    Time: 11:00am CST
-                </div>
-                <a href="https://us05web.zoom.us/j/85397064199?pwd=X3DF7vX2AYi763ZMPIqtLHh43VCgrf.1" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors inline-flex items-center shadow-lg">
-                    <i class="fas fa-video mr-2"></i>
-                    Join Zoom Webinar
-                </a>
-            </div>
-
-            <!-- Workshop 2 -->
-            <div class="bg-gradient-to-br from-purple-50 to-purple-100 rounded-xl p-6 border border-purple-200 hover:shadow-lg transition-shadow">
-                <div class="w-12 h-12 bg-purple-500 rounded-lg flex items-center justify-center mb-4">
-                    <i class="fas fa-palette text-white text-xl"></i>
-                </div>
-                <h3 class="text-xl font-bold text-gray-900 mb-2">Intro to Vibe Coding</h3>
-                <p class="text-gray-600 mb-4">Discover creative coding techniques and learn how to build visually engaging projects.</p>
-                <div class="text-sm text-purple-600 font-medium">
-                    <i class="fas fa-clock mr-1"></i>
-                    Duration: 30 minutes
-                </div>
-                <div class="text-sm text-purple-600 font-medium">
-                    <i class="fas fa-clock mr-1"></i>
-                    Time: 2:00pm CST
-                </div>
-                <a href="https://us05web.zoom.us/j/89033319471?pwd=T5SEjrY1LoPjAAaDzTTZlQxBKN7Ut8.1" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors inline-flex items-center shadow-lg">
-                    <i class="fas fa-video mr-2"></i>
-                    Join Zoom Webinar
-                </a>
-            </div>
-
-            <!-- Workshop 3 -->
-            <div class="bg-gradient-to-br from-green-50 to-green-100 rounded-xl p-6 border border-green-200 hover:shadow-lg transition-shadow">
-                <div class="w-12 h-12 bg-green-500 rounded-lg flex items-center justify-center mb-4">
-                    <i class="fas fa-brain text-white text-xl"></i>
-                </div>
-                <h3 class="text-xl font-bold text-gray-900 mb-2">Computational Thinking</h3>
-                <p class="text-gray-600 mb-4">Learn how to approach problems using strategies and logical thinking for effective programming.</p>
-                <div class="text-sm text-green-600 font-medium">
-                    <i class="fas fa-clock mr-1"></i>
-                    Duration: 30 minutes
-                </div>
-                <div class="text-sm text-green-600 font-medium">
-                    <i class="fas fa-clock mr-1"></i>
-                    Time: 4:00pm CST
-                </div>    
-                <a href="https://us05web.zoom.us/j/85397064199?pwd=X3DF7vX2AYi763ZMPIqtLHh43VCgrf.1" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors inline-flex items-center shadow-lg">
-                    <i class="fas fa-video mr-2"></i>
-                    Join Zoom Webinar
-                </a>
-            </div>
+            <a href="https://drive.google.com/drive/folders/1ZKiW8gNUK3mco-Sf9oX0Mzy9CLNYJIjP?usp=drive_link" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors inline-flex items-center shadow-lg">
+            <i class="fas fa-video mr-2"></i>
+            View Past Webinars
+        </a>
         </div>
     </div>
 </section>
@@ -479,9 +420,6 @@
               <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                   <!-- Team Member 1 -->
                   <div class="bg-gray-50 rounded-xl p-8 hover:bg-gray-100 transition-all border border-gray-200">
-                      <div class="w-32 h-32 bg-orange-200 rounded-full mx-auto mb-6 flex items-center justify-center">
-                          <i class="fas fa-user text-4xl text-orange-600"></i>
-                      </div>
                       <h3 class="text-2xl font-bold mb-2 text-gray-900">Thanveer Muthukumar</h3>
                       <p class="text-orange-500 mb-4">Founder & Lead Organizer</p>
                       <p class="text-gray-600 text-sm">Passionate about making technology accessible to all students</p>
